--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="external_libs/json_simple-1.1.jar"/>
+	<classpathentry kind="lib" path="external_libs/svenson-1.4.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/adaptive-proxy"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/adaptive-proxy-plugins-core"/>
